<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llStart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@drawable/shape_start_activity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/tvGameTitle"
            style="@style/text_view_style"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/game_title"
            android:textColor="@color/colorOnBackground"
            android:textSize="@dimen/mainTextSize" />

        <Button
            android:id="@+id/bStartGame"
            style="@style/main_buttons_style"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/bOpenScores"
            style="@style/main_buttons_style"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/scores_text" />

        <Button
            android:id="@+id/bOpenSettings"
            style="@style/main_buttons_style"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/settings_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
